--- a/eksctl.yaml
+++ b/eksctl.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata:
   name: expense
-  region: es-east-1
+  region: us-east-1
 managedNodeGroups: #nodeGroup → we need to manage # managedNodeGroup → will manage by EKS
 - name: expense
   instanceType: m5.large
