--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: mysql 
-        image: mysql:5.7 #will replace with our mysql image 
+        image: gopi1998/mysql:v1.0 #will replace with our mysql image 
         ports:
         - containerPort: 3306 #default port of mysql
 ---
