--- a/frontend/manifast.yaml
+++ b/frontend/manifast.yaml
@@ -135,7 +135,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: frontend
   labels:
     project: expense
     tier: web
