--- a/frontend/manifast.yaml
+++ b/frontend/manifast.yaml
@@ -95,7 +95,7 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name: frontend
   labels:
     project: expense
     tier: web
